# DexRT

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CheckGit.cmake  Dockerfile  LICENSE  README.md  cococo_lyb.py  compare_lw.py  compare_output.py  dex_yakl_utils.cmake  gauss_lobatto.py  given_3_wavelength_config.py  hea15_compare.py  hea15_proxy.py  irradiated_slab_atmos.py  notes.md  plot_compare_I_semiempirical.py  plot_jack_model_params.py  plot_output.py  plot_output_J.py  plot_output_J_2d.py  plot_output_J_nr.py  plot_output_J_pw.py  plot_output_basic.py  plot_output_dilution.py  plot_ray_output_rotato.py  semiempirical_isobaric_atmos.py  semiempirical_static_atmos.py  slab_atmos.py  sphere_test_3d_plot.py  status.md  stratified_prom.py  wild-duck_setup.md  write_dexrt_ray_cfn_prom.py  write_dexrt_ray_new.py  write_jk2020_config.py  write_ray_jack.py  (+1 more)
.devcontainer/: devcontainer.json
.devcontainer/nvhpc/: Dockerfile  devcontainer.json
.devcontainer/oneapi-wsl2/: Dockerfile  devcontainer.json
.devcontainer/ubuntu2204/: Dockerfile  devcontainer.json
PaperFigures/: draw_central_cascade_hack.py  draw_probe_grid.py  interval.py  parallax.py  penumbra.py
PaperFigures/CircleTest/: given_3_wavelength_single_config.py  plot_output.py
PaperFigures/DiscoTest/: given_3_wavelength.py  plot_disco_test.py
dexrt_py/dexrt/: write_config.py
dexrt_py/dexrt/config_schemas/: dexrt.py  dexrt_ray.py
docker_deps/hdf5/: docker_setup.sh  setup.sh
docker_deps/kokkos/: archie_cuda_setup.sh  colin_cuda_setup.sh  default_cuda_setup.sh  default_cuda_setup_debug.sh  docker_setup.sh  wild-duck_cuda_setup.sh
docker_deps/kokkos-kernels/: default_cuda_setup.sh  docker_setup.sh  simple_debug_setup.sh
docker_deps/magma/: docker_setup.sh
docker_deps/pnetcdf/: setup.sh
kokkos/: docker_setup.sh
magma/: magma.conf
miniconda/: docker_setup.sh  env_setup.sh
netcdf/: docker_setup.sh
pnetcdf/: docker_setup.sh
source/: AlwaysFalse.hpp  Atmosphere.hpp  BlockMap.cpp  BlockMap.hpp  BoundaryDispatch.hpp  BoundaryType.hpp  CascadeState.cpp  CascadeState.hpp  CascadeState3d.cpp  CascadeState3d.hpp  ChargeConservation.cpp  ChargeConservation.hpp  Collisions.cpp  Collisions.hpp  Config.hpp  Constants.hpp  CoreAndVoigtEmisOpac.cpp  CoreAndVoigtEmisOpac.hpp  CrtafParser.hpp  DexrtConfig.hpp  DirectionalEmisOpacInterp.cpp  DirectionalEmisOpacInterp.hpp  DynamicFormalSolution.cpp  DynamicFormalSolution.hpp  DynamicFormalSolution3d.cpp  DynamicFormalSolution3d.hpp  DynamicRadianceCascades.hpp  DynamicRayMarching.hpp  EmisOpac.hpp  FormalSolution.hpp  GammaMatrix.hpp  GitVersion.cpp.in  GitVersion.hpp  InitialPops.cpp  InitialPops.hpp  JasPP.hpp  LineSweepSetup.cpp  LineSweepSetup.hpp  LineSweeping.hpp  LoopUtils.hpp  (+48 more)
source/ExYakl/: netcdf.hpp
tests/: CMakeLists.txt  H_6.yaml  carlson_quads.py  crtaf_H_6.py  crtaf_test_atom.py  lte_source_fn.py  riesz_energy_quadratures.py  tabulate_H_partfn.py  test_25d_integral.py  test_CaII.yaml  test_aabb_rotate.py  test_atom.yaml  test_block_map.py  test_crtaf.cpp  test_emis_opac.cpp  test_gesv.cpp  test_limb_darkening_angle.py  test_lte.cpp  test_raymarch.cpp  test_utils.cpp  test_voigt.cpp  voigt_test_array.py
tests/demos/diffuse_source/: Config.hpp  main.cpp  plot_output.py
tests/demos/dilution_J_bc/: README  irradiated_slab_atmos.py  main.cpp
tests/demos/lightweaver_comparison_2d/: Config.hpp  Makefile  main.cpp  plot_output.py  simple_3_wavelength.py
tests/demos/solid_source/: Config.hpp  main.cpp  plot_output.py
tests/demos/static_lte_fs/: Config.hpp  main.cpp  plot_output_J.py  slab_atmos.py
